--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "Guilherme Reginaldo Ruella",
   "license": "MIT",
   "dependencies": {
-    "knex": "^0.12.7",
-    "mysql2": "^1.2.0",
+    "dotenv": "^4.0.0",
+    "mongoose": "^4.11.1",
     "w-srvr": "^2.1.0"
   }
 }
