--- a/src/package.json
+++ b/src/package.json
@@ -4,8 +4,7 @@
   "author": "Guilherme Reginaldo Ruella",
   "license": "MIT",
   "dependencies": {
-    "vue": "^2.2.4",
-    "vue-router": "^2.3.0",
-    "web-event-emitter": "^1.1.0"
+    "vue": "^2.3.4",
+    "vue-router": "^2.7.0"
   }
 }
